[gd_scene load_steps=7 format=3 uid="uid://ctopvsutscw32"]

[ext_resource type="Script" path="res://Enemies/Melee/melee-character.gd" id="1_x7hii"]
[ext_resource type="Texture2D" uid="uid://mlgssr4jqxls" path="res://icon.svg" id="2_71pke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbwn5"]
size = Vector2(135.156, 121.063)

[sub_resource type="CircleShape2D" id="CircleShape2D_bhf4k"]
radius = 473.08

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bc27"]
size = Vector2(97, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8yew"]
size = Vector2(175.5, 98.25)

[node name="melee-character" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_x7hii")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_vbwn5")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("2_71pke")

[node name="PlayerDetection" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/PlayerDetection"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_bhf4k")

[node name="PlayerDeath" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/PlayerDeath"]
position = Vector2(-2, 18)
shape = SubResource("RectangleShape2D_2bc27")

[node name="PlayerCollision" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/PlayerCollision"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_e8yew")

[connection signal="body_entered" from="CharacterBody2D/PlayerDetection" to="CharacterBody2D" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/PlayerDetection" to="CharacterBody2D" method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="CharacterBody2D/PlayerDeath" to="CharacterBody2D" method="_on_player_death_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/PlayerCollision" to="CharacterBody2D" method="_on_player_collision_body_entered"]
